--- a/notebooks/Fraud_Detection_Pipeline_Project.ipynb
+++ b/notebooks/Fraud_Detection_Pipeline_Project.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "id": "0951c91a-5b85-4c48-aaf8-3891e08a6b05",
    "metadata": {},
    "outputs": [],
@@ -2918,7 +2918,16 @@
    "name": "conda-base-py"
   },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
